# django-playground-202511

./: db.sqlite3  grid_demo.html  pyproject.toml
blog/: admin.py  drf_urls.py  drf_views.py  filters.py  forms.py  models.py  ninja.py  schemas.py  serializers.py  urls.py  validators.py  views.py
blog/migrations/: 0001_initial.py  0002_article_is_published.py  0003_author_tag_article_author_article_tags.py  0004_article_created_by.py  0005_set_default_created_by.py  0006_alter_article_created_by.py  0007_article_cover_image.py  0008_alter_article_cover_image.py  0009_alter_article_options_alter_author_options_and_more.py
blog/templates/blog/: article_bulk_delete.html  article_create.html  article_delete.html  article_detail.html  article_edit.html  article_list.html  author_detail.html  author_list.html  base.html  tag_list.html
bruno/: Article List.bru
bruno/DRF/: Article Create.bru  Article Delete.bru  Article Detail.bru  Article List.bru  Article Partial Update.bru  Article Update.bru  Login.bru  folder.bru
bruno/Ninja/: Article Create.bru  Article Delete.bru  Article Detail.bru  Article List.bru  Article Partial Update.bru  Article Update.bru  folder.bru
core/: ninja.py  settings.py  urls.py  views.py
practices/: urls.py  views.py
practices/templates/practices/: cart.html  (+7 more)
templates/: 403.html  404.html  base.html
templates/registration/: login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
(+3 files in other folders)
